--- a/src/Components/Todo/List.css
+++ b/src/Components/Todo/List.css
@@ -6,8 +6,8 @@
      display: flex;
       justify-content: space-between;
       align-items: center;
-      border-radius: 6px;
-      border: 0.2px solid gray;
+      border-radius: 5px;
+      border: 0.1px solid ghostwhite;
       padding-left: 5px;
       padding-right: 5px;
       height: 50px;
@@ -34,7 +34,7 @@
  
  
  .addTodo input{
-    width: 260px;
+    width: 250px;
     height: 30px;
     border-radius: 5px;
  }
@@ -44,7 +44,7 @@
 }
 
  .addTodo button{
-     height: 35px;
+     height: 30px;
      border-radius: 5px;
      cursor: pointer;
  }
